# Writer-AI

./: .gitignore  api_get_data.py  app.py  pyproject.toml  requirements.txt
backend/: ai_evalutor.py  db.py  docx_writer.py  hashing.py  main.py  users.py
