[project]
name = "kurs-ishi-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "config",
    "docx>=0.2.4",
    "langgraph>=1.2.8",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.13.0",
    "python-docx>=1.2.0",
    "streamlit>=1.59.1",
]
