[project]
name = "kurs-ishi-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argon2-cffi>=25.1.0",
    "config",
    "docx>=0.2.4",
    "fastapi>=0.139.0",
    "langchain-core>=1.4.9",
    "langchain-google-genai>=4.2.7",
    "langchain-postgres>=0.0.17",
    "langgraph>=1.2.8",
    "psycopg2-binary>=2.9.12",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.13.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
    "streamlit>=1.59.1",
]
